--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    font: 15px/1.5 Arial, Helvetica, sans-serif;
+    font: 13px/1.3 Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
     background-color: #f4f4f4;
@@ -66,13 +66,60 @@ header a:hover{
 
 #showcase{
     text-align: center;
+    font: 15px/1.5 Arial, Helvetica, sans-serif;
     background: url("../img/showcase_backgroung.jpeg") no-repeat -400px;
     background-attachment: fixed;
     color: #ffffff;
     min-height: 300px;
+    border-bottom: #e8491d 3px solid;
+    height: 500px;
 }
 
+#showcase ul{
+    list-style-type: none;
+    font: 15px/1.5 Arial, Helvetica, sans-serif;
+
+}
+
+#showcase li{
+    font: 22px/2 Arial, Helvetica, sans-serif;
+}
+
+#company{
+    text-align: left;
+    background: #35424a;
+    background-attachment: fixed;
+    color: #ffffff;
+    min-height: 300px;
+    border-bottom: #e8491d 3px solid;
+}
+
+#services{
+    text-align: left;
+    background: url("../img/showcase_backgroung.jpeg") no-repeat -400px;
+    background-attachment: fixed;
+    color: #ffffff;
+    min-height: 300px;
+    border-bottom: #e8491d 3px solid;
+}
+
+#contact{
+    text-align: left;
+    background: #35424a;
+    background-attachment: fixed;
+    color: #ffffff;
+    min-height: 300px;
+    border-bottom: #e8491d 3px solid;
+}
+
+.container h2{
+    
+}
 .container a{
+    color: #ffffff;
+}
+
+.container table{
     color: #ffffff;
 }
 
@@ -84,9 +131,9 @@ header a:hover{
     font-weight: bold;
 }
 
-section#information{
+#information{
     border-top: #e8491d 3px solid;
-    background-color: #35424a;
+    background: url("../img/showcase_backgroung.jpeg") no-repeat -400px;
     color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -120,4 +167,8 @@ footer{
     text-align: center;
     font-size: 10px;
     padding: 0;
+}
+
+footer p{
+    margin: 0;
 }
